--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -14,7 +14,15 @@
     color: white;
     background-color: hsl(200, 100%, 50%);
 }
+.btn--danger {
+    color: white;
+    background-color: hsl(0, 100%, 50%);
+}
 
 .btn--primary:hover {
     background-color: hsl(200, 100%, 35%)
+}
+
+.btn--danger:hover {
+    background-color: hsl(0, 100%, 35%)
 }
